--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 TOKEN="MTMzNDgxODQ0ODg3Mzc1NDY2Ng.Gp-wO0.mrbb-lnK-hpGsfdnkvSTo4OXgbRgAx34b7ErWA"
+API_KEY="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"
