--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "groq>=0.18.0",
     "gspread>=6.1.4",
     "oauth2client>=4.1.3",
+    "psutil>=7.0.0",
     "py-cord>=2.6.1",
     "python-dotenv>=1.0.1",
 ]
