feat: implemented better organized rewrite with links classification and todo generation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,24 @@
-TOKEN="BOT TOKEN"
+# Discord Bot Config
+TOKEN=
+
+# Openrouter Config
+OPENROUTER_API_KEY=
+OPENROUTER_MODEL=
+OPENROUTER_BASE_URL=
+OPENROUTER_HTTP_REFERER=
+OPENROUTER_APP_TITLE=
+
+# Linear Integration
+LINEAR_API_KEY=
+LINEAR_TEAM_ID= 
+LINEAR_PROJECT_ID=None
+
+# Linear State IDs
+LINEAR_STATE_TODO_ID=
+LINEAR_STATE_BACKLOG_ID=
+
+# Linear Label IDs
+LINEAR_LABEL_URGENT_ID=
+LINEAR_LABEL_HIGH_PRIORITY_ID=
+LINEAR_LABEL_MEDIUM_PRIORITY_ID=
+LINEAR_LABEL_LOW_PRIORITY_ID=
