--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "db-sqlite3>=0.0.1",
+    "openai>=1.50.0",
+    "gql[all]>=3.0.0",
     "groq>=0.18.0",
     "gspread>=6.1.4",
     "oauth2client>=4.1.3",
