--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 db-sqlite3>=0.0.1
+openai>=1.50.0
 groq>=0.18.0
 gspread>=6.1.4
 oauth2client>=4.1.3
 psutil>=7.0.0
 py-cord>=2.6.1
 python-dotenv>=1.0.1
+gql[all]>=3.0.0
