feat: added github sync support

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ LINEAR_LABEL_URGENT_ID=
 LINEAR_LABEL_HIGH_PRIORITY_ID=
 LINEAR_LABEL_MEDIUM_PRIORITY_ID=
 LINEAR_LABEL_LOW_PRIORITY_ID=
+
+# GitHub Sync
+GITHUB_PAT=
